@@ -1,3 +1,8 @@
+2024-11-01 Philipp Klaus Krause <philipp@colecovision.eu>
+
+	* src/SDCCpeeph.c:
+	  Fix bug #3792.
+
 2024-10-31 Philipp Klaus Krause <philipp@colecovision.eu>
 
 	* src/z80/gen.c,
